--- a/app/views/couriers/index.html.erb
+++ b/app/views/couriers/index.html.erb
@@ -2,5 +2,9 @@
 
 <% @couriers.each do |courier| %>
     <h2><%= courier.name%></h2>
-    <a href=''><%= courier.email%></a>
+    <%= mail_to courier.email %>
+    <br>
+    <%= link_to 'Show', courier_path(courier) %> |
+    <%= link_to 'Edit', edit_courier_path(courier) %> |
+    <%= link_to 'Delete', courier_path(courier), data: {method: :delete, confirm:'Are you sure?'} %>
 <% end %>
