--- a/app/views/couriers/_form.html.erb
+++ b/app/views/couriers/_form.html.erb
@@ -1,13 +1,26 @@
+<%= render 'shared/errors', object: @courier %>
+
 <%= form_with model: @courier do |f| %>
-    <div>
-        <%= f.label :name %>
-        <%= f.text_field :name, required: true %>
+    <div class='mb-3 row'>
+        <div class='col-sm-1 col-form-label'>
+            <%= f.label :name %>
+        </div>
+
+        <div class='col-sm-4'>
+            <%= f.text_field :name, required: true, class: 'form-control' %>
+        </div>
     </div>
 
-    <div>
-        <%= f.label :email %>
-        <%= f.text_field :email, required: true %>
+    <div class='mb-3 row'>
+        <div class='col-sm-1 col-form-label'>
+            <%= f.label :email %>
+        </div>
+       
+
+        <div class='col-sm-4'>
+            <%= f.text_field :email, required: true, class: 'form-control' %>
+        </div>
     </div>
 
-    <%= f.submit "Submit!" %>
+    <%= f.submit "Submit!", class: 'btn btn-primary' %>
 <% end %>
