--- a/app/views/couriers/_form.html.erb
+++ b/app/views/couriers/_form.html.erb
@@ -18,7 +18,7 @@
        
 
         <div class='col-sm-4'>
-            <%= f.text_field :email, required: true, class: 'form-control' %>
+            <%= f.email_field :email, required: true, class: 'form-control' %>
         </div>
     </div>
 
